# containerize_inference

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
docker/: mmdetection.Dockerfile  mmdetection3d.Dockerfile  ultralytics.Dockerfile
launch/: inference.launch
rviz/: inference.rviz
scripts/: inference_docker.py  inference_host.py  run_docker_container.sh
scripts/utils/: dataset.py  docker_utils.py  ipc_utils.py  ros_utils.py  weight_utils.py
