cmake_minimum_required(VERSION 3.0.2)
project(containerize_inference)

find_package(catkin REQUIRED COMPONENTS rospy sensor_msgs ros_numpy)

## Uncomment this if the package has a setup.py. This macro ensures
## modules and global scripts declared therein get installed
## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
catkin_python_setup()

###################################
## catkin specific configuration ##
###################################
## The catkin_package macro generates cmake config files for your package
## Declare things to be passed to dependent projects
## INCLUDE_DIRS: uncomment this if your package contains header files
## LIBRARIES: libraries you create in this project that dependent projects also need
## CATKIN_DEPENDS: catkin_packages dependent projects also need
## DEPENDS: system dependencies of this project that dependent projects also need
catkin_package(
        # INCLUDE_DIRS include
        # LIBRARIES containerize_inference
        CATKIN_DEPENDS rospy sensor_msgs ros_numpy
        # DEPENDS system_lib
)
