<?xml version="1.0"?>
<package format="2">
    <name>containerize_inference</name>
    <version>0.0.0</version>
    <description>The containerize_inference package</description>
    <maintainer email="andreas.reich@unibw.de">Andreas Reich</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>tf2_ros</depend>
    <depend>sensor_msgs</depend>
    <depend>ros_numpy</depend>
    <depend>object_instance_msgs</depend>

    <exec_depend>rviz_object_instance</exec_depend>

    <export>
    </export>
</package>
